--- a/Flights/src/gui/Admin.fxml
+++ b/Flights/src/gui/Admin.fxml
@@ -75,15 +75,10 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button fx:id="button_delete" mnemonicParsing="false" onAction="#delete" prefWidth="54.0" text="Delete" />
-                  <Button fx:id="button_add" mnemonicParsing="false" onAction="#add" text="Add" GridPane.columnIndex="1">
-                     <font>
-                        <Font name="Book Antiqua" size="12.0" />
-                     </font>
-                  </Button>
+                  <TextField fx:id="tf_departtime" />
                </children>
             </GridPane>
-            <TextField fx:id="tf_id_delete" promptText="Flight ID" GridPane.rowIndex="3" />
+            <TextField fx:id="tf_id_delete" promptText="Flight ID" GridPane.rowIndex="4" />
             <Label fx:id="label_add_message" textFill="#0fd319" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="3">
                <font>
                   <Font name="System Bold" size="20.0" />
@@ -96,6 +91,26 @@
             </Label>
             <GridPane GridPane.columnIndex="3" GridPane.rowIndex="4">
               <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="54.0" minWidth="10.0" prefWidth="18.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints />
+              </rowConstraints>
+               <children>
+                  <Button fx:id="button_back" mnemonicParsing="false" onAction="#back" prefHeight="23.0" prefWidth="86.0" text="Log Out" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                     <font>
+                        <Font name="Book Antiqua" size="12.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="button_refresh" mnemonicParsing="false" onAction="#refresh" prefHeight="25.0" prefWidth="89.0" text="REFRESH" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+               </children>
+            </GridPane>
+            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="4">
+              <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
@@ -105,14 +120,21 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button fx:id="button_back" mnemonicParsing="false" onAction="#back" prefHeight="23.0" prefWidth="88.0" text="Log Out" GridPane.columnIndex="1" GridPane.rowIndex="3">
-                     <font>
-                        <Font name="Book Antiqua" size="12.0" />
-                     </font>
-                  </Button>
+                  <Button fx:id="button_delete" mnemonicParsing="false" onAction="#delete" prefWidth="54.0" text="Delete" GridPane.rowIndex="1" />
                </children>
             </GridPane>
-            <Button fx:id="button_refresh" mnemonicParsing="false" onAction="#refresh" prefHeight="25.0" prefWidth="89.0" text="REFRESH" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+            <Button fx:id="button_add" mnemonicParsing="false" onAction="#add" text="Add" GridPane.columnIndex="2" GridPane.rowIndex="4">
+               <font>
+                  <Font name="Book Antiqua" size="12.0" />
+               </font>
+            </Button>
+            <Label prefHeight="17.0" prefWidth="83.0" text="Depart Time" GridPane.rowIndex="3">
+               <font>
+                  <Font size="11.0" />
+               </font>
+            </Label>
+            <Label text="Arrive Time" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <TextField fx:id="tf_arrivetime" GridPane.columnIndex="3" GridPane.rowIndex="3" />
          </children>
       </GridPane>
    </children>
