--- a/Flights/src/gui/Admin.fxml
+++ b/Flights/src/gui/Admin.fxml
@@ -14,9 +14,9 @@
    <children>
       <GridPane hgap="10.0" vgap="10.0">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="107.19994354248047" minWidth="10.0" prefWidth="57.0" />
-            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="184.80005645751953" minWidth="10.0" prefWidth="150.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="138.0" minWidth="10.0" prefWidth="125.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="134.0" minWidth="10.0" prefWidth="98.0" />
+            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="184.80005645751953" minWidth="10.0" prefWidth="112.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="138.0" minWidth="10.0" prefWidth="122.0" />
           <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="161.5999755859375" minWidth="10.0" prefWidth="118.0" />
         </columnConstraints>
         <rowConstraints>
@@ -32,59 +32,54 @@
          <children>
             <Label text="ID:">
                <font>
-                  <Font name="Book Antiqua" size="14.0" />
+                  <Font name="Impact" size="17.0" />
                </font>
             </Label>
             <Label text="Arrive: " GridPane.columnIndex="2" GridPane.rowIndex="2">
                <font>
-                  <Font name="Book Antiqua" size="14.0" />
+                  <Font name="Impact" size="17.0" />
                </font>
             </Label>
             <Label text="From:" GridPane.rowIndex="1">
                <font>
-                  <Font name="Book Antiqua" size="14.0" />
+                  <Font name="Impact" size="17.0" />
                </font>
             </Label>
-            <Label prefHeight="18.0" prefWidth="50.0" text="Depart: " GridPane.rowIndex="2">
+            <Label prefHeight="22.0" prefWidth="64.0" text="Depart: " GridPane.rowIndex="2">
                <font>
-                  <Font name="Book Antiqua" size="14.0" />
-               </font>
-            </Label>
-            <Label text="Capacity: " GridPane.columnIndex="2">
-               <font>
-                  <Font name="Book Antiqua" size="14.0" />
+                  <Font name="Impact" size="17.0" />
                </font>
             </Label>
             <Label text="To:" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <font>
-                  <Font name="Book Antiqua" size="14.0" />
+                  <Font name="Impact" size="17.0" />
                </font>
             </Label>
-            <TextField fx:id="tf_flightid" GridPane.columnIndex="1" />
-            <TextField fx:id="tf_fromcity" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="tf_capacity" GridPane.columnIndex="3" />
-            <TextField fx:id="tf_tocity" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-            <TextField fx:id="dp_depart" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="dp_arrive" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-            <GridPane hgap="10.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <TextField fx:id="tf_flightid" promptText="Flight ID" GridPane.columnIndex="1" />
+            <TextField fx:id="tf_fromcity" promptText="From" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="tf_capacity" promptText="Capacity" GridPane.columnIndex="3" />
+            <TextField fx:id="tf_tocity" promptText="To" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <TextField fx:id="dp_depart" promptText="mm/dd/yyyy" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="dp_arrive" promptText="mm/dd/yyyy" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+            <GridPane hgap="10.0" prefHeight="48.0" prefWidth="125.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="105.60003662109375" minWidth="10.0" prefWidth="105.60003662109375" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="79.20001220703125" minWidth="10.0" prefWidth="62.39996337890625" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="140.0" minWidth="10.0" prefWidth="140.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="79.20001220703125" minWidth="0.0" prefWidth="0.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <TextField fx:id="tf_departtime" />
+                  <TextField fx:id="tf_departtime" promptText="Depart Time" />
                </children>
             </GridPane>
-            <TextField fx:id="tf_id_delete" promptText="Flight ID" GridPane.rowIndex="4" />
-            <Label fx:id="label_add_message" textFill="#0fd319" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="3">
+            <TextField fx:id="tf_id_delete" prefHeight="17.0" prefWidth="98.0" promptText="Flight ID" GridPane.rowIndex="4" />
+            <Label fx:id="label_add_message" prefHeight="26.0" prefWidth="0.0" textFill="#0fd319" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="4">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
             </Label>
-            <Label fx:id="label_delete_message" textFill="#ee0101" GridPane.columnIndex="2" GridPane.rowIndex="3">
+            <Label fx:id="label_delete_message" textFill="#ee0101" GridPane.columnIndex="2" GridPane.rowIndex="4">
                <font>
                   <Font name="System Bold" size="22.0" />
                </font>
@@ -106,7 +101,7 @@
                         <Font name="Book Antiqua" size="12.0" />
                      </font>
                   </Button>
-                  <Button fx:id="button_refresh" mnemonicParsing="false" onAction="#refresh" prefHeight="25.0" prefWidth="89.0" text="REFRESH" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button fx:id="button_refresh" mnemonicParsing="false" onAction="#refresh" prefHeight="25.0" prefWidth="89.0" text="Refresh" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                </children>
             </GridPane>
             <GridPane GridPane.columnIndex="1" GridPane.rowIndex="4">
@@ -118,23 +113,34 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button fx:id="button_delete" mnemonicParsing="false" onAction="#delete" prefWidth="54.0" text="Delete" GridPane.rowIndex="1" />
+                  <Button fx:id="button_delete" mnemonicParsing="false" onAction="#delete" prefHeight="36.0" prefWidth="54.0" text="Delete" GridPane.rowIndex="2" />
+                  <Button fx:id="button_add" mnemonicParsing="false" onAction="#add" prefHeight="12.0" prefWidth="37.0" text="Add" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                     <font>
+                        <Font name="Book Antiqua" size="12.0" />
+                     </font>
+                  </Button>
                </children>
             </GridPane>
-            <Button fx:id="button_add" mnemonicParsing="false" onAction="#add" text="Add" GridPane.columnIndex="2" GridPane.rowIndex="4">
+            <Label prefHeight="22.0" prefWidth="92.0" text="Depart Time:" wrapText="true" GridPane.rowIndex="3">
                <font>
-                  <Font name="Book Antiqua" size="12.0" />
-               </font>
-            </Button>
-            <Label prefHeight="17.0" prefWidth="83.0" text="Depart Time" GridPane.rowIndex="3">
-               <font>
-                  <Font size="11.0" />
+                  <Font name="Impact" size="17.0" />
                </font>
             </Label>
-            <Label text="Arrive Time" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-            <TextField fx:id="tf_arrivetime" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+            <Label text="Arrive Time:" GridPane.columnIndex="2" GridPane.rowIndex="3">
+               <font>
+                  <Font name="Impact" size="17.0" />
+               </font>
+            </Label>
+            <TextField fx:id="tf_arrivetime" promptText="Arrive Time" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+            <Label text="Capacity:" GridPane.columnIndex="2">
+               <font>
+                  <Font name="Impact" size="17.0" />
+               </font>
+            </Label>
          </children>
       </GridPane>
    </children>
