--- a/Flights/src/gui/AdminRegister.fxml
+++ b/Flights/src/gui/AdminRegister.fxml
@@ -14,10 +14,10 @@
   <children>
       <GridPane hgap="10.0" vgap="10.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" prefWidth="83.5999755859375" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="189.00001220703126" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" prefWidth="82.59998779296876" />
-            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="192.7999755859375" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="103.0" minWidth="10.0" prefWidth="103.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="171.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="107.0" minWidth="10.0" prefWidth="107.0" />
+            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="169.0" />
         </columnConstraints>
         <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -36,50 +36,50 @@
          <children>
             <Label text="First Name:">
                <font>
-                  <Font name="Book Antiqua" size="14.0" />
+                  <Font name="Impact" size="17.0" />
                </font>
             </Label>
             <Label text="Last Name:" GridPane.columnIndex="2">
                <font>
-                  <Font name="Book Antiqua" size="14.0" />
+                  <Font name="Impact" size="17.0" />
                </font>
             </Label>
             <Label text="Username:" GridPane.rowIndex="1">
                <font>
-                  <Font name="Book Antiqua" size="14.0" />
+                  <Font name="Impact" size="17.0" />
                </font>
             </Label>
-            <Label text="Password" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <Label text="Password:" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <font>
-                  <Font name="Book Antiqua" size="14.0" />
+                  <Font name="Impact" size="17.0" />
                </font>
             </Label>
-            <Label text="Social Security Number:" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="2">
+            <Label text="SSN:" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="2">
                <font>
-                  <Font name="Book Antiqua" size="14.0" />
+                  <Font name="Impact" size="17.0" />
                </font>
             </Label>
             <Label text="Email:" GridPane.rowIndex="2">
                <font>
-                  <Font name="Book Antiqua" size="14.0" />
+                  <Font name="Impact" size="17.0" />
                </font>
             </Label>
             <Label text="Address:" GridPane.rowIndex="3">
                <font>
-                  <Font name="Book Antiqua" size="14.0" />
+                  <Font name="Impact" size="17.0" />
                </font>
             </Label>
             <Label text="Security Question: " wrapText="true" GridPane.rowIndex="4">
                <font>
-                  <Font name="Book Antiqua" size="14.0" />
+                  <Font name="Impact" size="17.0" />
                </font>
             </Label>
             <Label text="Answer:" GridPane.columnIndex="2" GridPane.rowIndex="4">
                <font>
-                  <Font name="Book Antiqua" size="14.0" />
+                  <Font name="Impact" size="17.0" />
                </font>
             </Label>
-            <Button fx:id="button_submit" mnemonicParsing="false" onAction="#addToAdminAccounts" prefHeight="26.0" prefWidth="79.0" text="Submit" translateX="155.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+            <Button fx:id="button_submit" mnemonicParsing="false" onAction="#addToAdminAccounts" prefHeight="28.0" prefWidth="115.0" text="Admin Register" translateX="155.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <font>
                   <Font name="Book Antiqua" size="14.0" />
                </font>
@@ -99,7 +99,7 @@
             </GridPane>
             <Label text="Where were you born?" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <font>
-                  <Font name="Book Antiqua" size="18.0" />
+                  <Font name="Impact" size="17.0" />
                </font>
             </Label>
             <TextField fx:id="tf_firstname" promptText="John" GridPane.columnIndex="1" />
@@ -116,7 +116,7 @@
                   <Font name="Book Antiqua" size="14.0" />
                </font>
             </Button>
-            <Button fx:id="button_user" mnemonicParsing="false" onAction="#addToUserAccounts" text="Button" GridPane.rowIndex="5" />
+            <Button fx:id="button_user" mnemonicParsing="false" onAction="#addToUserAccounts" prefHeight="29.0" prefWidth="99.0" text="User Register" GridPane.rowIndex="5" />
          </children>
       </GridPane>
    </children>
