--- a/Flights/src/gui/Searches.fxml
+++ b/Flights/src/gui/Searches.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -36,10 +35,10 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <TextField promptText="From" />
-                  <TextField promptText="To" GridPane.columnIndex="2" />
-                  <DatePicker promptText="Depart" GridPane.columnIndex="1" />
-                  <DatePicker promptText="Arrive" GridPane.columnIndex="3" />
+                  <TextField fx:id="fromText" promptText="From" />
+                  <TextField fx:id="toText" promptText="To" GridPane.columnIndex="2" />
+                  <TextField fx:id="departText" promptText="MM/DD/YYYY Depart" GridPane.columnIndex="1" />
+                  <TextField promptText="MM/DD/YYYY Arrive" GridPane.columnIndex="3" />
                </children>
             </GridPane>
             <Button mnemonicParsing="false" text="Search" GridPane.columnIndex="1">
@@ -76,13 +75,15 @@
                </children>
             </GridPane>
             <TableView fx:id="table" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
-              <columns>
-                <TableColumn fx:id="idColumn" prefWidth="75.0" text="Flight ID" />
-                <TableColumn fx:id="arriveDateColumn" prefWidth="95.99994659423828" text="Arrive Date" />
-                  <TableColumn fx:id="arriveTimeColumn" prefWidth="104.79998779296875" text="Arrive Time" />
-                  <TableColumn fx:id="departDateColumn" prefWidth="123.20001220703125" text="Depart Date" />
-                  <TableColumn fx:id="departTimeColumn" prefWidth="122.39996337890625" text="Depart Time" />
-              </columns>
+               <columns>
+                <TableColumn fx:id="idColumn" prefWidth="57.599976897239685" text="Flight ID" />
+                  <TableColumn prefWidth="76.79999542236328" text="City" />
+                  <TableColumn fx:id="departTimeColumn" prefWidth="82.4000244140625" text="Depart Time" />
+                  <TableColumn fx:id="departDateColumn" prefWidth="81.59996032714844" text="Depart Date" />
+                  <TableColumn prefWidth="54.4000244140625" text="City" />
+                  <TableColumn fx:id="arriveTimeColumn" prefWidth="82.39996337890625" text="Arrive Time" />
+                <TableColumn fx:id="arriveDateColumn" prefWidth="83.20004272460938" text="Arrive Date" />
+               </columns>
             </TableView>
          </children>
          <padding>
