--- a/Flights/src/gui/Admin.fxml
+++ b/Flights/src/gui/Admin.fxml
@@ -84,41 +84,34 @@
                   <Font name="System Bold" size="22.0" />
                </font>
             </Label>
-            <GridPane GridPane.columnIndex="3" GridPane.rowIndex="4">
+            <GridPane vgap="10.0" GridPane.columnIndex="3" GridPane.rowIndex="4">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="54.0" minWidth="10.0" prefWidth="18.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints />
               </rowConstraints>
                <children>
-                  <Button fx:id="button_back" mnemonicParsing="false" onAction="#back" prefHeight="23.0" prefWidth="86.0" text="Log Out" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                  <Button fx:id="button_back" mnemonicParsing="false" onAction="#back" prefHeight="26.0" prefWidth="90.0" text="Log Out" GridPane.rowIndex="1">
                      <font>
                         <Font name="Book Antiqua" size="12.0" />
                      </font>
                   </Button>
-                  <Button fx:id="button_refresh" mnemonicParsing="false" onAction="#refresh" prefHeight="25.0" prefWidth="89.0" text="Refresh" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button fx:id="button_refresh" mnemonicParsing="false" onAction="#refresh" prefHeight="25.0" prefWidth="89.0" text="Refresh" />
                </children>
             </GridPane>
-            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <GridPane hgap="10.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button fx:id="button_delete" mnemonicParsing="false" onAction="#delete" prefHeight="36.0" prefWidth="54.0" text="Delete" GridPane.rowIndex="2" />
-                  <Button fx:id="button_add" mnemonicParsing="false" onAction="#add" prefHeight="12.0" prefWidth="37.0" text="Add" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                  <Button fx:id="button_delete" mnemonicParsing="false" onAction="#delete" prefHeight="36.0" prefWidth="54.0" text="Delete" />
+                  <Button fx:id="button_add" mnemonicParsing="false" onAction="#add" prefHeight="39.0" prefWidth="50.0" text="Add" GridPane.columnIndex="1">
                      <font>
                         <Font name="Book Antiqua" size="12.0" />
                      </font>
