--- a/Flights/src/gui/AdminRegister.fxml
+++ b/Flights/src/gui/AdminRegister.fxml
@@ -79,7 +79,7 @@
                   <Font name="Impact" size="17.0" />
                </font>
             </Label>
-            <Button fx:id="button_submit" mnemonicParsing="false" onAction="#addToAdminAccounts" prefHeight="28.0" prefWidth="115.0" text="Admin Register" translateX="155.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+            <Button fx:id="button_submit" mnemonicParsing="false" onAction="#addToAdminAccounts" prefHeight="28.0" prefWidth="98.0" text="Register" translateX="125.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <font>
                   <Font name="Book Antiqua" size="14.0" />
                </font>
@@ -116,7 +116,6 @@
                   <Font name="Book Antiqua" size="14.0" />
                </font>
             </Button>
-            <Button fx:id="button_user" mnemonicParsing="false" onAction="#addToUserAccounts" prefHeight="29.0" prefWidth="99.0" text="User Register" GridPane.rowIndex="5" />
          </children>
       </GridPane>
    </children>
