--- a/Flights/src/gui/Logout.fxml
+++ b/Flights/src/gui/Logout.fxml
@@ -26,44 +26,15 @@
             </Label>
             <GridPane prefHeight="100.0" prefWidth="258.0" GridPane.rowIndex="1">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <GridPane prefHeight="60.0" prefWidth="150.0">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="71.0" minWidth="10.0" prefWidth="46.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="104.0" minWidth="10.0" prefWidth="104.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints maxHeight="19.0" minHeight="10.0" prefHeight="13.0" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="9.0" minHeight="3.0" prefHeight="9.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                     <children>
-                        <Button fx:id="button_yes" mnemonicParsing="false" onAction="#yes" text="YES" textFill="#ee0303" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                     </children>
-                  </GridPane>
-                  <GridPane GridPane.columnIndex="1">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints maxHeight="15.0" minHeight="3.0" prefHeight="3.0" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="31.0" minHeight="0.0" prefHeight="8.0" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="31.0" minHeight="0.0" prefHeight="23.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="23.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                     <children>
-                        <Button fx:id="button_no" mnemonicParsing="false" onAction="#no" text="NO" textFill="#07d051" GridPane.rowIndex="2" />
-                     </children>
-                  </GridPane>
+                  <Button fx:id="button_no" mnemonicParsing="false" onAction="#no" text="NO" textFill="#07d051" GridPane.columnIndex="1" />
+                  <Button fx:id="button_yes" mnemonicParsing="false" onAction="#yes" text="YES" textFill="#ee0303" />
                </children>
             </GridPane>
          </children>
