--- a/Flights/src/gui/Forgot.fxml
+++ b/Flights/src/gui/Forgot.fxml
@@ -19,6 +19,7 @@
         <rowConstraints>
           <RowConstraints maxHeight="108.79998168945312" minHeight="10.0" prefHeight="88.00001220703125" valignment="CENTER" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="106.19998779296876" minHeight="10.0" prefHeight="81.59998779296873" valignment="CENTER" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="106.19998779296876" minHeight="10.0" prefHeight="81.59998779296873" valignment="CENTER" vgrow="SOMETIMES" />
         </rowConstraints>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -41,8 +42,9 @@
                <children>
                   <TextField fx:id="tf_security_answer" alignment="CENTER" promptText="Answer" GridPane.columnIndex="1" />
                   <TextField fx:id="tf_username" promptText="EnterUsername" />
-                  <Button fx:id="button_enter" mnemonicParsing="false" onAction="#revealPassword" prefHeight="26.0" prefWidth="62.0" text="Enter" translateX="-30.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Label fx:id="label_password_message" textFill="#e80303" GridPane.rowIndex="1" />
+                  <Label fx:id="label_password_message" prefHeight="17.0" prefWidth="0.0" textFill="#e80303" GridPane.rowIndex="1" />
+                  <TextField fx:id="tf_new_password" promptText="Enter new password" GridPane.rowIndex="1" />
+                  <Button fx:id="button_enter" mnemonicParsing="false" onAction="#revealPassword" prefHeight="26.0" prefWidth="62.0" text="Enter" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                </children>
             </GridPane>
             <Label prefHeight="86.0" prefWidth="279.0" text="Where were you born?" textAlignment="CENTER" wrapText="true">
@@ -50,6 +52,36 @@
                   <Font name="Impact" size="30.0" />
                </font>
             </Label>
+            <GridPane GridPane.rowIndex="2">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label fx:id="label_update_message" textFill="#02d356" GridPane.rowIndex="3">
+                     <font>
+                        <Font size="17.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="label_failed_message" textFill="#f80101" GridPane.rowIndex="5">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Button fx:id="button_login" mnemonicParsing="false" onAction="#backToLogin" text="Login" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+               </children>
+            </GridPane>
          </children>
       </GridPane>
    </children>
