--- a/Flights/src/gui/AdminRegister.fxml
+++ b/Flights/src/gui/AdminRegister.fxml
@@ -79,7 +79,7 @@
                   <Font name="Impact" size="17.0" />
                </font>
             </Label>
-            <Button fx:id="button_submit" mnemonicParsing="false" onAction="#addToAdminAccounts" prefHeight="28.0" prefWidth="98.0" text="Register" translateX="125.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+            <Button fx:id="button_submit" mnemonicParsing="false" onAction="#addToAdminAccounts" prefHeight="28.0" prefWidth="74.0" text="Register" GridPane.columnIndex="2" GridPane.rowIndex="5">
                <font>
                   <Font name="Book Antiqua" size="14.0" />
                </font>
@@ -116,6 +116,11 @@
                   <Font name="Book Antiqua" size="14.0" />
                </font>
             </Button>
+            <Label fx:id="message" text=" " wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="5">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Label>
          </children>
       </GridPane>
    </children>
