--- a/Flights/src/gui/AdminLogin.fxml
+++ b/Flights/src/gui/AdminLogin.fxml
@@ -78,28 +78,30 @@
                   </Button>
                </children>
             </GridPane>
-            <Button fx:id="newUserButton" mnemonicParsing="false" onAction="#register" prefHeight="28.0" prefWidth="122.0" text="New User?" GridPane.rowIndex="3" GridPane.valignment="TOP">
-               <font>
-                  <Font name="Book Antiqua" size="14.0" />
-               </font>
-            </Button>
             <Button fx:id="backButton" mnemonicParsing="false" onAction="#back" prefHeight="28.0" prefWidth="120.0" text="Back" GridPane.rowIndex="4">
                <font>
                   <Font name="Book Antiqua" size="14.0" />
                </font>
             </Button>
-            <GridPane GridPane.rowIndex="4">
+            <GridPane hgap="10.0" GridPane.rowIndex="3">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button fx:id="button_forgot" mnemonicParsing="false" onAction="#forgotButton" text="Forgot Password" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Button fx:id="button_forgot" mnemonicParsing="false" onAction="#forgotButton" text="Forgot Password">
+                     <font>
+                        <Font name="Book Antiqua" size="14.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="newUserButton" mnemonicParsing="false" onAction="#register" prefHeight="28.0" prefWidth="122.0" text="New User?" GridPane.columnIndex="1">
+                     <font>
+                        <Font name="Book Antiqua" size="14.0" />
+                     </font>
+                  </Button>
                </children>
             </GridPane>
          </children>
