--- a/Flights/src/gui/AdminRegister.fxml
+++ b/Flights/src/gui/AdminRegister.fxml
@@ -121,6 +121,11 @@
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
+            <Label fx:id="label_admin_register" GridPane.rowIndex="5">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
          </children>
       </GridPane>
    </children>
