--- a/Flights/src/gui/Searches.fxml
+++ b/Flights/src/gui/Searches.fxml
@@ -67,8 +67,8 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <TextField fx:id="idText" prefHeight="26.0" prefWidth="141.0" promptText="Flight ID" GridPane.columnIndex="1" />
-                  <Button mnemonicParsing="false" text="Add" GridPane.columnIndex="2">
+                  <TextField fx:id="tf_flight" prefHeight="26.0" prefWidth="141.0" promptText="Flight ID" GridPane.columnIndex="1" />
+                  <Button mnemonicParsing="false" onAction="#add" text="Add" GridPane.columnIndex="2">
                      <font>
                         <Font name="Book Antiqua" size="12.0" />
                      </font>
