--- a/Flights/src/gui/Forgot.fxml
+++ b/Flights/src/gui/Forgot.fxml
@@ -20,6 +20,7 @@
           <RowConstraints maxHeight="108.79998168945312" minHeight="10.0" prefHeight="88.00001220703125" valignment="CENTER" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="106.19998779296876" minHeight="10.0" prefHeight="81.59998779296873" valignment="CENTER" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="106.19998779296876" minHeight="10.0" prefHeight="81.59998779296873" valignment="CENTER" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="106.19998779296876" minHeight="10.0" prefHeight="81.59998779296873" valignment="CENTER" vgrow="SOMETIMES" />
         </rowConstraints>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -42,9 +43,8 @@
                <children>
                   <TextField fx:id="tf_security_answer" alignment="CENTER" promptText="Answer" GridPane.columnIndex="1" />
                   <TextField fx:id="tf_username" promptText="EnterUsername" />
-                  <Label fx:id="label_password_message" prefHeight="17.0" prefWidth="0.0" textFill="#e80303" GridPane.rowIndex="1" />
                   <TextField fx:id="tf_new_password" promptText="Enter new password" GridPane.rowIndex="1" />
-                  <Button fx:id="button_enter" mnemonicParsing="false" onAction="#revealPassword" prefHeight="26.0" prefWidth="62.0" text="Enter" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button fx:id="button_enter" mnemonicParsing="false" onAction="#revealPassword" prefHeight="14.0" prefWidth="62.0" text="Enter" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                </children>
             </GridPane>
             <Label prefHeight="86.0" prefWidth="279.0" text="Where were you born?" textAlignment="CENTER" wrapText="true">
@@ -61,14 +61,14 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button fx:id="button_login" mnemonicParsing="false" onAction="#backToLogin" prefHeight="43.0" prefWidth="62.0" text="Back to Login" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="1" />
-                  <Label fx:id="message" wrapText="true">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
+                  <Button fx:id="button_login" mnemonicParsing="false" onAction="#backToLogin" prefHeight="20.0" prefWidth="97.0" text="Back to Login" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="1" />
                </children>
             </GridPane>
+            <Label fx:id="label_password_message" prefHeight="17.0" prefWidth="5.0" GridPane.rowIndex="3">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
          </children>
       </GridPane>
    </children>
